Closed Bug 99443 Opened 23 years ago Closed 23 years ago

First line of bookmarks located in column head [@ nsContainerBox::RemoveAfter]

Categories

(SeaMonkey :: Bookmarks & History, defect, P1)

x86
Linux
defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9.5

People

(Reporter: gilles+mozilla, Assigned: waterson)

Details

(Keywords: crash, regression, topcrash)

Crash Data

Attachments

(4 files)

2001091221 trunk linux Look at the bookmark sidebar and bookmark manage window. First line of bookmarks is located where the column's title should be.
did you try to scroll there? The header gets glued all over. A resize of pane will refresh.
Keywords: regression
similar bug in the "Address Book" tab
Yep scrolling the bookmark has the same effect. The address book is pretty screwed up too.
upping severity... this smells like a "mostfreq-to-be" CC waterson in case he has an idea what caused this.. please remove yourself if i guess wrong.
Severity: normal → critical
More fun: resizing AB pane causes a crash.
Attached file backtrace
to repro: drag horizontal divider down, then up: crash TB35326480X TB35326543H
Here is first talkback id's trace: operator []() nsCOMPtr_base::assign_from_helper() nsEventListenerManager::RemoveEventListener() nsEventListenerManager::RemoveEventListenerByType() nsXULElement::RemoveEventListener() nsXULTreeGroupFrame::~nsXULTreeGroupFrame() nsFrame::Destroy() nsContainerFrame::Destroy() nsBoxFrame::Destroy() nsFrameList::DestroyFrame() nsXULTreeGroupFrame::ContinueReflow() nsTreeLayout::LazyRowCreator() nsXULTreeOuterGroupFrame::ReflowFinished() PresShell::HandlePostedReflowCallbacks() PresShell::ProcessReflowCommands() PresShell::FlushPendingNotifications() nsSplitterFrameInner::AdjustChildren() nsSplitterFrameInner::MouseDrag() nsSplitterFrame::HandleEvent() PresShell::HandleEventInternal() PresShell::HandleEvent() nsView::HandleEvent() nsViewManager::DispatchEvent() HandleEvent() nsWidget::DispatchEvent() nsWidget::DispatchWindowEvent() nsWidget::DispatchMouseEvent() nsWidget::OnMotionNotifySignal() nsWindow::HandleGDKEvent() dispatch_superwin_event() handle_gdk_event() libgdk-1.2.so.0 + 0x1716b (0x4033d16b) libglib-1.2.so.0 + 0x10055 (0x4036d055) libglib-1.2.so.0 + 0x10659 (0x4036d659) libglib-1.2.so.0 + 0x107e8 (0x4036d7e8) libgtk-1.2.so.0 + 0x9165b (0x4028265b) nsAppShell::Run() nsAppShellService::Run() main1() main() libc.so.6 + 0x1c177 (0x404ae177)
Keywords: crash
I'll take a first look at this one; may be related to checkin from bug 84645.
Assignee: ben → waterson
Status: NEW → ASSIGNED
Priority: -- → P1
Target Milestone: --- → mozilla0.9.5
Attached file minimized test case
This must be related to my change, but I'm still tracking it down. The problem appears to be related to the way that the XUL sort service removes, then appends, content after doing sort.
Okay, I botched the logic when porting from nsFrameManager::AppendFrames(). Patch coming up.
So this patch still isn't quite right, but it is compatible with what we were doing before. Ideally, we'd do what the XXX comment says. I think hyatt filed a bug on that somewhere.
Keywords: patch
tested the patch (linux): no more crash and all looks nice again.
Comment on attachment 49253 [details] [diff] [review] Use the first appended content to find the filtered insertion point, if one exists. r=dbaron if you get sr from hyatt
Attachment #49253 - Flags: review+
It would take about 10-15 minutes to fix this the right way. You can call GetSingleInsertionPoint to get the unfiltered point and to find out if multiple points exist. If multiplePoints is false, then you can use the adjusted parent from GetSingleInsertionPoint. If multiplePoints is true, then you can walk each child, and make individual ContentInserted calls. Anyway, sr=hyatt for the hack, but you'll get extra hugs and kisses from me if you fix it the right way. ;)
I'm not sure it's that simple. If it _is_ that simple, then why must nsCSSFrameConstructor::GetInsertionPoint() recur? Anyway, I'll check in the above patch, open a new bug to fix the problem the right way, and attach a patch.
Fix checked in. Opened bug 99543 to fix ContentAppended() the right way.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Linking to topcrash that should be fixed...
Keywords: topcrash
Summary: First line of bookmarks located in column head → First line of bookmarks located in column head [@ nsContainerBox::RemoveAfter]
mass-verifying claudius' Fixed bugs which haven't changed since 2001.12.31. if you think this particular bug is not fixed, please make sure of the following before reopening: a. retest with a *recent* trunk build. b. query bugzilla to see if there's an existing, open bug (new, reopened, assigned) that covers your issue. c. if this does need to be reopened, make sure there are specific steps to reproduce (unless already provided and up-to-date). thanks! [set your search string in mail to "AmbassadorKoshNaranek" to filter out these messages.]
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
Crash Signature: [@ nsContainerBox::RemoveAfter]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: