Bug 99443. Use filtered insertion point of first appended child instead of unfiltered insertion point when appending. r=dbaron, sr=hyatt